[package]
name = "dotnes"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "Yet another .net file parser"
repository = "https://git.7sdre.am/7sDream/dotnes"
readme = "README.md"
license-file = "LICENSE"
publish = false

[lib]
name = "dotnes"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2.0"
num-derive = "0.3.0"

[dev-dependencies]
walkdir = "2.2.9"
