[package]
name = "dotnes"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2018"
description = "Yet another NES file parser"
repository = "https://github.com/7sDream/dotnes"
readme = "README.md"
license-file = "LICENSE"
keywords = ["game", "nes", "file format", "parser"]
categories = ["emulators", "parser-implementations"]

[lib]
name = "dotnes"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
walkdir = "2"
